fix(api): fix API_BASE_URL resolution for relative reverse proxying and allow wildcard CORS origin patterns