@@ -23,7 +23,7 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowedOriginPatterns(List.of("*"));
         config.setAllowedHeaders(List.of(
             "Origin", "Content-Type", "Accept", "Authorization", "X-Tenant-ID", "X-Requested-With"
         ));
